# lass

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
scripts/: aachen_daynight.json  generate_7scenes.sh  run_aachen_daynight.sh  run_cambridge_all.sh  run_cambridge_assign.sh  run_cambridge_raycast.sh  run_robotcar.md  viz_seq.sh
scripts/7scenes_config/: chess.json  fire.json  heads.json  heads025.json  heads1.json  office.json  pumpkin.json  redkitchen.json  stairs.json  stairs1.json
scripts/cambridge_assign_config/: KingsCollege.json  OldHospital.json
scripts/cambridge_config/: GreatCourt.json  KingsCollege.json  OldHospital.json  ShopFacade.json  StMarysChurch.json  Street.json
src/: CMakeLists.txt  MapManager.cc  MapManager.h  MapManagerNG.cc  batch_fillhole.cc  filter_robotcar_raycast.cc  mesh_sampling.cc  mesh_sampling.h  reprojection_error_cost.h  test_LODR.cc  test_blend_color.cc  test_cambridge_landmark.cc  test_extrinsics.cc  test_mapmanager.cc  test_pointcloud_processing.cc  test_raycasting.cc  test_split_robotcar_train_test.cc  test_tsdf.cc  utils.cc  utils.h
src/exec/: CMakeLists.txt  batch_fillhole.cc  cluster_reprojection_check.cc  evaluate_pose.cc  test_7scenes_sfm.cc  test_LODR.cc  test_aachen_daynight.cc  test_blend_color.cc  test_blend_color_draw_figure.cc  test_cambridge_assign_voxel_label.cc  test_cambridge_landmark.cc  test_fillhole.cc  test_mapmanager.cc  test_pnp.cc  test_pnp_draw_figure.cc  test_raycasting.cc  test_transfer_list.cc  test_tsdf.cc  viz_seq.cc
