add_executable(test_pointcloud_processing test_pointcloud_processing.cc)
target_link_libraries(test_pointcloud_processing lass)

add_executable(test_mapmanager test_mapmanager.cc)
target_link_libraries(test_mapmanager lass)

add_executable(test_extrinsics test_extrinsics.cc)
target_link_libraries(test_extrinsics lass)

add_executable(test_raycasting test_raycasting.cc)
target_link_libraries(test_raycasting lass)

add_executable(test_tsdf test_tsdf.cc)
target_link_libraries(test_tsdf lass)

add_executable(test_LODR test_LODR.cc)
target_link_libraries(test_LODR lass)

add_executable(batch_fillhole batch_fillhole.cc)
target_link_libraries(batch_fillhole lass)

add_executable(test_fillhole test_fillhole.cc)
target_link_libraries(test_fillhole ${OpenCV_LIBS})

add_executable(test_blend_color test_blend_color.cc)
target_link_libraries(test_blend_color lass)

add_executable(test_split_robotcar_train_test test_split_robotcar_train_test.cc)
target_link_libraries(test_split_robotcar_train_test lass)

add_executable(test_cambridge_landmark test_cambridge_landmark.cc)
target_link_libraries(test_cambridge_landmark lass)

add_executable(evaluate_pose evaluate_pose.cc)
target_link_libraries(evaluate_pose)

add_executable(test_cambridge_assign_voxel_label test_cambridge_assign_voxel_label.cc)
target_link_libraries(test_cambridge_assign_voxel_label lass)

add_executable(test_blend_color_draw_figure test_blend_color_draw_figure.cc)
target_link_libraries(test_blend_color_draw_figure lass)

add_executable(test_pnp test_pnp.cc)
target_link_libraries(test_pnp lass)
